better spacing content/code; fixing mobile view and img, name and rectangles for tablet view/breakpoint

--- a/scss/style.css
+++ b/scss/style.css
@@ -43,6 +43,8 @@ body {
 
 /* mobile */
 .container {
+  padding: 1.5rem 0.75rem;
+  max-width: 375px;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (minmax(20px, 1fr))[auto-fit];
@@ -54,7 +56,7 @@ body {
 }
 
 .gallery__img {
-  width: 100%;
+  width: 98%;
   line-height: 100%;
   max-width: 100ch;
   -o-object-fit: cover;
@@ -120,16 +122,16 @@ body {
 .rectangle {
   display: inline-block;
   position: relative;
-  width: 78px;
+  width: 95%;
   height: 52px;
-  border-radius: 12px;
+  border-radius: 0.75rem;
   background-color: #e5e5e5;
   border: none;
   font-family: "Montserrat", sans-serif;
   font-style: normal;
   font-weight: 600;
-  font-size: 12px;
-  line-height: 15px;
+  font-size: 0.75rem;
+  line-height: 0.9rem;
   text-align: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -138,6 +140,10 @@ body {
   padding: 0.65rem;
   color: #4e5150;
   margin: 0.2rem 0rem 1.7rem 0rem;
+  -webkit-border-radius: 0.75rem;
+  -moz-border-radius: 0.75rem;
+  -ms-border-radius: 0.75rem;
+  -o-border-radius: 0.75rem;
 }
 
 .rectangle1 {
@@ -181,7 +187,8 @@ body {
   grid-column: 1 / 4;
   -ms-grid-row: 5;
   grid-row: 5;
-  margin: 0rem 1rem 0rem 0.6rem;
+  width: 83%;
+  margin: 0rem 0rem 0rem 0.6rem;
 }
 
 .gallery__item--2 {
@@ -192,7 +199,8 @@ body {
   grid-column: 4 / 9;
   -ms-grid-row: 5;
   grid-row: 5;
-  margin: 0 0.6rem 0 -0.7rem;
+  width: 101%;
+  margin: 0rem -0.5rem 0.2rem -0.8rem;
 }
 
 .gallery__item--3 {
@@ -237,7 +245,8 @@ body {
   grid-column: 1 / 4;
   -ms-grid-row: 7;
   grid-row: 7;
-  margin: 0rem 1.1rem 1.8rem 0.6rem;
+  width: 81%;
+  margin: 0rem 1rem 2rem 0.6rem;
 }
 
 footer {
@@ -271,6 +280,7 @@ footer a {
 /* tablets */
 @media only screen and (min-device-width: 768px) and (max-device-width: 1023px) and (-webkit-min-device-pixel-ratio: 1) {
   .container {
+    max-width: 768px;
     display: -ms-grid;
     display: grid;
     -ms-grid-columns: (minmax(20px, 1fr))[auto-fit];
@@ -278,7 +288,7 @@ footer a {
     grid-auto-flow: dense;
     grid-gap: 0.6rem;
     position: relative;
-    margin: 0 4rem 0 4rem;
+    padding: 2rem 6rem;
     justify-items: stretch;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
@@ -288,16 +298,37 @@ footer a {
             justify-content: space-evenly;
   }
   .profile-photo {
+    width: 97%;
     -ms-grid-column: 3;
     -ms-grid-column-span: 2;
     grid-column: 3 / 5;
-    margin: 2rem 0rem 0.5rem 5rem;
-    border-radius: 57px;
+    margin: 2rem 0rem 0.5rem 4.675rem;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    border-radius: 35%;
+    -webkit-border-radius: 35%;
+    -moz-border-radius: 35%;
+    -ms-border-radius: 35%;
+    -o-border-radius: 35%;
   }
   .name {
     font-size: 1.15rem;
+    -ms-grid-column: 3;
+    -ms-grid-column-span: 4;
+    grid-column: 3 / 7;
     line-height: 1.05rem;
     margin-top: 0.5rem;
+    margin-left: .5rem;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   .town {
     font-size: 0.63rem;
@@ -305,52 +336,61 @@ footer a {
     margin: 0.2rem 0 0.5rem 0;
   }
   .rectangle {
-    width: 90px;
-    height: 60px;
-    border-radius: 1rem;
-    font-size: 0.8rem;
+    width: 71%;
+    height: 72%;
+    margin: 0.2rem 1rem 1.7rem 0rem;
+    font-size: 1rem;
     line-height: 1.2rem;
-    text-align: center;
-    padding: 0.9rem;
-    margin: 0.2rem 0rem 1.7rem 0rem;
   }
   .rectangle1 {
-    margin-left: 5rem;
+    margin-left: 3.5rem;
   }
   .rectangle2 {
-    margin-left: 2rem;
+    margin-left: 1.3rem;
   }
   .rectangle3 {
     margin-left: -1rem;
   }
+  .gallery__img {
+    width: 100%;
+  }
   .gallery__item--1 {
     -ms-grid-column: 1;
-    -ms-grid-column-span: 2;
-    grid-column: 1 / 3;
-    margin: 0rem -3.2rem 1rem 0.6rem;
+    -ms-grid-column-span: 3;
+    grid-column: 1 / 4;
+    width: 89%;
+    margin: 1rem 0rem 0rem 0.6rem;
   }
   .gallery__item--2 {
-    -ms-grid-column: 3;
+    -ms-grid-column: 2;
     -ms-grid-column-span: 6;
-    grid-column: 3 / 9;
-    margin: 0 0.6rem 1rem 4rem;
+    grid-column: 2 / 8;
+    width: 90%;
+    margin: 1rem 0rem .7rem 7rem;
+  }
+  .gallery__item--3 {
+    width: 105%;
+    margin: 0rem 0rem 0 .6rem;
   }
   .gallery__item--4 {
-    margin: 0 0.6rem 2.9rem 1.3rem;
+    width: 90%;
+    margin: 0 0rem 0rem 2.5rem;
   }
-  .gallery__item--5 {
+  + .gallery__item--5 {
     -ms-grid-column: 4;
-    -ms-grid-column-span: 2;
-    grid-column: 4 / 6;
+    -ms-grid-column-span: 3;
+    grid-column: 4 / 7;
     -ms-grid-row: 7;
     grid-row: 7;
-    margin: 0rem -0.9rem 1.8rem -1.7rem;
+    width: 89%;
+    margin: 0rem 2rem 0rem 0rem;
   }
   .gallery__item--6 {
     -ms-grid-column: 1;
     -ms-grid-column-span: 3;
     grid-column: 1 / 4;
-    margin: 0rem 2rem 1.5rem 0.6rem;
+    width: 89%;
+    margin: 0rem 0rem 0rem 0.6rem;
   }
   footer {
     margin: 4rem 0 2rem 0;
@@ -360,7 +400,7 @@ footer a {
 /* laptops */
 @media screen and (min-device-width: 1024px) and (max-device-width: 1439px) and (-webkit-min-device-pixel-ratio: 1) {
   .container {
-    margin: 0 12rem 0 12rem;
+    padding: 2rem 10rem;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -368,7 +408,11 @@ footer a {
   }
   .profile-photo {
     margin: 3rem 0rem 0rem 2.5rem;
-    border-radius: 90px;
+    border-radius: 35%;
+    -webkit-border-radius: 57px;
+    -moz-border-radius: 57px;
+    -ms-border-radius: 57px;
+    -o-border-radius: 57px;
   }
   .name {
     font-size: 1.5rem;
@@ -436,7 +480,8 @@ footer a {
 /*  bigger laptops etc. */
 @media screen and (min-device-width: 1440px) and (-webkit-min-device-pixel-ratio: 1) {
   .container {
-    margin: 0 2rem 0 2rem;
+    max-width: 1440px;
+    padding: 2.5rem 15rem;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
